<resources>
    <string name="app_name">Video On Demand</string>
    <string name="browse_title"><![CDATA[Videos by Your Company]]></string>
    <string name="related_movies">Related Videos</string>
    <string name="grid_view">Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="watch_trailer_1">Watch trailer</string>
    <string name="watch_trailer_2">FREE</string>
    <string name="rent_1">Rent By Day</string>
    <string name="rent_2">From $1.99</string>
    <string name="buy_1">Buy and Own</string>
    <string name="buy_2">AT $9.99</string>
    <string name="movie">Movie</string>

    <!-- Error messages -->
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>
    <string name="vertical_grid_title"><![CDATA[Vertical Video Grid]]></string>
    <string name="error">Error</string>
    <string name="ok">OK</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="init_text">00:00</string>
    <string name="play_pause_description">Play Pause Button</string>
    <string name="loading">Loading&#8230;</string>
    <string name="no_video_found">No video was found</string>
    <string name="about_app">About DemoCast Player</string>
    <string name="version">Version: %1$s</string>
    <string name="popular_header">Popular Videos</string>
    <string name="preferences">PREFERENCES</string>
    <string name="should_start">shouldStart</string>
    <string name="start_position">startPosition</string>
    <string name="search_results">Search Results</string>

    <!-- Error messages -->
    <string name="video_error_media_load_timeout">Media loading timed out</string>
    <string name="video_error_server_inaccessible">Media server was not reachable</string>
    <string name="video_error_unknown_error">Failed to load video</string>
    <string name="oops">Oops</string>
    <string name="label_version">Version</string>
    <string name="txt_empty">Username</string>
    <string name="label_password">Password</string>
    <string name="hint_password">password</string>
    <string name="btn_login">Sign In</string>

    <string name="allow_country">other/geoblock</string>
    <string name="check_mac">mac/exists</string>
    <string name="get_group_info">user/group_json</string>
    <string name="movie_category_list">movies/parent</string>
    <string name="movie_list_detail">movies/category</string>
    <string name="movie_play_link">movies/getmovie</string>
    <string name="multi_login">multi/login/detect</string>
    <string name="check_user">user/checklogin</string>
    <string name="parental_url">movies/parentallock</string>
    <string name="send_crash_url">http://worldondemand.net/app/json_v5/app_error.php</string>
    <string name="imdb_details">https://api.themoviedb.org/3/movie/</string>
    <string name="login_click">user/login</string>
    <string name="update_session">session/update</string>
    <string name="movie_preview">movies/preview</string>
    <string name="get_utc">other/utc</string>
    <string name="search_url">movies/search</string>
    <string name="movie_fav_link">movies/favorite/addfavorite</string>
    <string name="empty_text" />
    <string name="err_unexpected">Unexpected error occurred</string>
    <string name="btn_dismiss">Dismiss</string>
    <string name="btn_relaunch">Re-Launch</string>
    <string name="err_json_exception">Unexpected Error Occurred while fetchig data</string>
    <string name="err_server_unreachable">Server not reachable</string>
    <string name="btn_settings">Settings</string>
    <string name="msg_feature_not_available">Feature not available</string>
    <string name="btn_retry">Retry</string>
    <string name="msg_update">Update</string>
    <string name="loading_app">Loading VoD</string>
    <string name="btn_reconnect">Reconnect</string>
    <string name="no_internet_title">No Internet Connection</string>
    <string name="no_internet_body">Reliable connection to Server failed.\nPlease check your Internet connection and try again.</string>
    <string name="user_not_registered">Your user id has not been registered into our system.\nPlease sign up first to use our services.</string>
    <string name="user_not_active">Your account has not been activated  yet.\nPlease contact your service provider to resolve  this issue.</string>
    <string name="user_not_approved">Your user account has not been approved .Please contact your service provider.</string>
    <string name="mac_not_registered">Your device has not been registered into our system.\nPlease contact your service provider and register device mac address to use our services</string>
    <string name="register_success_message">You have successfully registered to our system. Please check your email and click the activation link to complete your registration. \\n\\nYou can login to the system only after our team reviews your request once your have activated your account. This process might take time so you are requested to wait our email confirmation of your Registration approval.\\nIf you did not receive any email or face any other issue regarding registration process, please email us at info@artemisiaiofcaria.com</string>
    <string name="request_permissions"><![CDATA[Movies needs an access to your <b>Extenal Storage</b>.]]></string>
    <string name="record_permissions"><![CDATA[Movies needs an access to your <b>Mic to record Speech</b>.]]></string>
    <string name="update">Update Found</string>
    <string name="downloading">Downloading…</string>
    <string name="download">Download</string>
    <string name="dismiss">dismiss</string>
    <string name="download_complete">Download Completed.</string>
    <string name="myaccount">Accounts</string>
    <string name="download_myaccount">Download  MyAccount</string>
    <string name="err_autologin">Some Error Occurred During AutoLogin ,please re-login again.</string>
    <string name="sign_in">Sign in</string>
    <string name="username">Username</string>
    <string name="invalid_hash">Invalid Hash Detected</string>
    <string name="invalid_user">Invalid User Detected</string>
    <string name="unexpctd_err_body">Something went wrong. Please re-login to resolve the issue.</string>
    <string name="movie_category">VoD Categories</string>
</resources>
