
<!-- android:background="#F5F5F5" -->
    <FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    android:background="@color/item_unselectedd"
    >
        <include layout="@layout/entry_point_layout"
            android:visibility="visible"/>

    <LinearLayout
        android:id="@+id/loginLinearyLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/signup_border_grey"
        android:orientation="vertical"
        android:padding="30dp"
        android:visibility="gone">


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:padding="10dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/sign_in"
                android:textSize="25sp"
                android:textColor="@color/textColor"/>



        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="10dp"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="5"
                android:text="Username"
                android:textSize="20sp"
                android:textColor="@color/signup_form_text_color"/>


            <TextView
                android:id="@+id/userNamePS"
                android:layout_width="500dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="@string/txt_empty"
                android:padding="5dp"
                android:textColor="@color/signup_form_text_color"
                android:textSize="20sp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/loginPasswordLabel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="5"
                android:text="@string/label_password"
                android:textColor="@color/signup_form_text_color"
                android:textSize="20sp"
                />

            <EditText
                android:id="@+id/passWordPS"
                android:background="@drawable/edittext_selector"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:padding="5dp"
                android:textColorHint="@color/color_text_silver"
                android:hint="@string/hint_password"
                android:textColor="@color/signup_form_text_color"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textSize="20sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">
            <Button
                android:id="@+id/loginButtonPS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/login_button_selector"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/btn_login"
                android:textColor="@drawable/selector_text_login"

                android:textAppearance="?android:attr/textAppearanceLarge"/>


        </LinearLayout>
    </LinearLayout>
    </FrameLayout>

